# hearts_ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hearts_ai.py  hearts_game.py  hearts_gui.py  hearts_learn.py  learned_weights.py  main.py  pyproject.toml  test_weights.py  weights.json
.claude/: settings.local.json
.github/: assistant.json
.github/workflows/: ci.yml
tests/: conftest.py  test_advanced_strategies.py  test_ai.py  test_coverage_augmented.py  test_coverage_gaps.py  test_game.py  test_learn.py  test_learn_coverage.py  test_learning_augmented.py
